--- a/config/west.yml
+++ b/config/west.yml
@@ -3,7 +3,7 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: mouse
-      url-base: https://github.com/krikun98/zmk.git
+      url-base: https://github.com/krikun98
   projects:
     - name: zmk
       remote: mouse
