--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: mouse
-      url-base: https://github.com/krikun98
   projects:
     - name: zmk
-      remote: mouse
-      revision: mouse-pr
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
