--- a/config/west.yml
+++ b/config/west.yml
@@ -3,13 +3,13 @@ manifest:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
     - name: mouse
-      url-base: https://github.com/urob
+      url-base: https://github.com/DelusionalLogic
   projects:
     - name: zmk
       #remote: zmkfirmware
       #revision: main
       remote: mouse
-      revision: mouse-3.2
+      revision: mouse0buttons
       import: app/west.yml
   self:
     path: config
