--- a/config/west.yml
+++ b/config/west.yml
@@ -2,14 +2,10 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: mouse
-      url-base: https://github.com/DelusionalLogic
   projects:
     - name: zmk
-      #remote: zmkfirmware
-      #revision: main
-      remote: mouse
-      revision: mouse0buttons
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
